# subsonic

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  diesel.toml  flake.nix  subsonic.db
.github/workflows/: nix-build.yml  release.yml
migrations/00000000000000_create_users/: up.sql
migrations/00000000000001_add_api_key/: down.sql  up.sql
migrations/00000000000002_add_starred/: down.sql  up.sql
src/: lib.rs  main.rs
src/api/: auth.rs  error.rs  mod.rs  response.rs  router.rs
src/api/handlers/: annotation.rs  browsing.rs  media.rs  mod.rs  playlists.rs  playqueue.rs  scanning.rs  system.rs  users.rs
src/crypto/: mod.rs  password.rs
src/db/: connection.rs  mod.rs  repository.rs  schema.rs
src/models/: mod.rs  music.rs  user.rs
src/scanner/: lyrics.rs  mod.rs
