[package]
name = "subsonic"
version = "0.9.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.38", features = ["serialize"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
md-5 = "0.10"
hex = "0.4"

# Database
diesel = { version = "2.2", features = ["sqlite", "r2d2", "chrono"] }
libsqlite3-sys = { version = "0.35", features = ["bundled"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }

# Password hashing
argon2 = "0.5"
password-hash = "0.5"
rand_core = { version = "0.6", features = ["std"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Media scanning
lofty = "0.22"
walkdir = "2"
rayon = "1.10"

# Utilities
dirs = "6"
urlencoding = "2"
